<resources>
    <string name="app_name">HearX</string>
    <string name="home_screen_heading">Welcome to HearX</string>
    <string name="start_test">Start Test</string>
    <string name="exit_test">Exit Test</string>
    <string name="submit_test">Submit Test</string>
    <string name="view_results">View Results</string>
    <string name="round">Round %1$s</string>
    <string name="difficulty">Difficulty %1$s</string>
    <string name="noise">Noise</string>
    <string name="digit_1">Digit 1</string>
    <string name="digit_2">Digit 2</string>
    <string name="digit_3">Digit 3</string>
    <string name="results">Results</string>
    <string name="enter_answer">Enter answer</string>
    <string name="done">Done</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">Please wait</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="test_complete">Test Complete</string>
    <string name="test_score">You have completed the test. Your score is: %1$s</string>
    <string name="test_error_minimum_characters">There should be 3 characters in the triplet answer</string>
    <string name="test_error_invalid_characters">There should be 3 unique characters in the triplet answer</string>
    <string name="test_error_upload_failed">Sorry, we could not upload the data at this moment.</string>
</resources>