<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.hearx.app.activities.TestActivity" />

        <variable
            name="viewmodel"
            type="com.hearx.app.viewModels.TestViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.TestActivity">

        <TextView
            android:id="@+id/txtRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{activity.getFormattedRoundString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Round" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foregroundGravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnExitTest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRound">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noise"
                android:onClick="@{() -> viewmodel.playNoise()}"/>

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_1"
                        android:onClick="@{() -> viewmodel.digit1()}"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_2"
                        android:onClick="@{() -> viewmodel.digit2()}"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_3"
                        android:onClick="@{() -> viewmodel.digit3()}"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btnExitTest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnExitTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.finishActivity()}"
            android:text="@string/exit_test"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmitTest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSubmitTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.submitTest()}"
            android:text="@string/submit_test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>