<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.hearx.app.viewModels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_screen_heading"
            style="@style/Theme.HearX.Heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnViewResults"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view_results"
            style="@style/Theme.HearX.PrimaryButton"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btnStartTest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{() -> viewmodel.viewResults()}"/>

        <Button
            android:id="@+id/btnStartTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_test"
            style="@style/Theme.HearX.PrimaryButton"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> viewmodel.startTest()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>